fix: dark mode bugs + badge section

--- a/css/index.css
+++ b/css/index.css
@@ -1,11 +1,11 @@
-@import url('https://fonts.cdnfonts.com/css/open-dyslexic');
+@import url("https://fonts.cdnfonts.com/css/open-dyslexic");
 
 :root {
-  --primary-color: #6B5FA0;
+  --primary-color: #6b5fa0;
   --secondary-color: #fff;
   --terciary-color: #a8a89e;
   --accessory-color: #8a9e83;
-  --highlight-color: #8A38F5;
+  --highlight-color: #8a38f5;
   --danger-color: #c07a56;
 }
 
@@ -14,7 +14,7 @@ body {
   margin-top: 0;
   margin-bottom: 0;
   padding: 20px;
-  font-family: 'DM Sans', sans-serif;
+  font-family: "DM Sans", sans-serif;
   background-color: #fdfbf7;
 }
 
@@ -39,15 +39,65 @@ body.dark-mode .form-control {
   color: #e8e8e8;
 }
 
+body.dark-mode input,
+input:focus,
+textarea,
+select,
+select:focus,
+#task-description,
+#task-title,
+#task-schedule-input {
+  background-color: #262635;
+  border-color: #4b4b5c;
+  color: #e8e8e8;
+}
+
+body.dark-mode .card {
+  background-color: #1e1e29;
+  border-color: #4b4b5c;
+  color: #e8e8e8;
+}
+
+body.dark-mode .exp-bar-container {
+    background-color: #39394b;
+}
+
+body.dark-mode .card:hover {
+  background-color: #262635;
+  border-color: #4b4b5c;
+  color: #e8e8e8;
+  opacity: 0.8;
+}
+
+body.dark-mode .task-detail-card {
+  background-color: #1e1e29;
+  border-color: #4b4b5c;
+  color: #e8e8e8;
+}
+
+body.dark-mode .task-detail-card * {
+  border-color: #1e1e29;
+  color: #e8e8e8;
+}
+
+body.dark-mode .task-meta {
+  background-color: #262635;
+  border-color: #3c3c49;
+  color: #262635;
+}
+
+body.dark-mode .task-detail-header {
+  color: #e8e8e8;
+}
+
 body.dark-mode .navbar-items a.active {
   background-color: #ffffff;
   color: #000000;
 }
 
 body.open-dyslexic {
-  font-family: 'Open-Dyslexic', sans-serif !important;
+  font-family: "Open-Dyslexic", sans-serif !important;
 }
-
 
 /*------------------------------Navbar-------------------------------*/
 
@@ -198,7 +248,6 @@ body.open-dyslexic {
   background-color: rgba(255, 255, 255, 0.12);
 }
 
-
 .navbar-items li {
   display: flex;
   align-items: center;
@@ -226,10 +275,8 @@ body.open-dyslexic {
 
 .navbar-items a.disabled {
   color: var(--secondary-color);
-  background-color:var(--terciary-color);
+  background-color: var(--terciary-color);
 }
-
-
 
 /* MOBILE */
 
@@ -307,8 +354,6 @@ body.open-dyslexic {
   align-items: center;
 }
 
-
-
 /* MEDIA QUERIES */
 
 /* Desktop */
@@ -332,11 +377,6 @@ body.open-dyslexic {
     display: flex;
   }
   body {
-  padding-bottom: 90px;
+    padding-bottom: 90px;
+  }
 }
-}
-
-
-
-
-
